--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,5 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="es">
 
 <head>
@@ -9,26 +9,37 @@
     {% endblock %}
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <style>
+        .active {
+            background-color: #666;
+            color: white;
+        }
+    </style>
     <title>{% block title %}Document {% endblock %}</title>
 </head>
 
 <body>
-    {% block header %}
-    {% include "base/header.html" %}
+{% block header %}
+{% include "base/header.html" %}
+{% endblock %}
+
+{% block sidebar %}
+{% include "base/sidebar.html" %}
+{% endblock %}
+
+<div class="container">
+
+    {% block content %}
+    <h4> Bloque de contenido </h4>
     {% endblock %}
-    <div class="container">
+</div>
 
-        {% block content %}
-        <h4> Bloque de contenido </h4>
-        {% endblock %}
-    </div>
+{% block footer %}
+{% include "base/footer.html" %}
+{% endblock%}
 
-    {% block footer %}
-    {% include "base/footer.html" %}
-    {% endblock%}
-
-    {% block extrajs %}
-    {% endblock %}
+{% block extrajs %}
+{% endblock %}
 
 </body>
 
